# databricks2

./: .gitignore  LICENSE  README.md  databricks.yml  pyproject.toml
.github/workflows/: ci.yml
src/agents_ai/weekly-report/jobs/: weekly_job.py
src/common/: secrets.py
